--- a/homepageM4D7.html
+++ b/homepageM4D7.html
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">Categories</a>
+                <a class="nav-link" href="backofficeM4D7.html">Backoffice</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,7 +50,7 @@
           </div>
         </div>
     </nav>
-    <!-- <div class="carousel slide" data-bs-ride="false">
+    <div id="carouselExampleCaptions" class="carousel slide mx-5" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -58,24 +58,24 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://images.pexels.com/photos/1693650/pexels-photo-1693650.jpeg" class="d-block w-100 px-5" alt="...">
+          <img src="https://img.freepik.com/free-vector/earth-galaxy-with-rising-sun-outline-edge_107791-16235.jpg?w=1800&t=st=1697384603~exp=1697385203~hmac=fd415e6329b443ee3d3a944777a3be203edd3f00957f05a9a139e7757135ff27" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>New In</h5>
+            <p>Check out our latest arrivals</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.pexels.com/photos/1693650/pexels-photo-1693650.jpeg" class="d-block w-100" alt="...">
+          <img src="https://img.freepik.com/free-vector/black-friday-sale-confetti-banner-with-text-space_1017-21912.jpg?w=2000&t=st=1697387671~exp=1697388271~hmac=11e1f81af41d069849de1c92748d7dadf7e568359f964261f2d6ae47385396e8" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>Best Deals</h5>
+            <p>Have fun while saving money!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.pexels.com/photos/1693650/pexels-photo-1693650.jpeg" class="d-block w-100" alt="...">
+          <img src="https://img.freepik.com/free-photo/halloween-background-with-scary-pumpkins-bats-dark-forest-night_123827-25830.jpg?t=st=1697382615~exp=1697386215~hmac=957c0fa4f5f81467e9e4c7322c045c3439aa8579a63de10607151d1c563a607b&w=1380" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5>Halloween Special</h5>
+            <p>Browse our spookiest items!</p>
           </div>
         </div>
       </div>
@@ -87,12 +87,13 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div> -->
-    <div class="row text-center">
-      <h3>Explore Our Catalog</h3>
     </div>
-    <section id="itemsList" class="container my-3 d-flex flex-wrap">
-    
+    <section class="shadow bg-white rounded py-5 my-2">
+      <div class="row text-center">
+        <h3>Explore Our Catalog</h3>
+      </div>
+      <div id="itemsList" class="container my-3 d-flex flex-wrap">
+      </div>
     </section>
     <main>
     </main>
