--- a/itemM4D7.html
+++ b/itemM4D7.html
@@ -8,22 +8,60 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body class="bg-primary bg-gradient bg-opacity-10">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">DC Marketplace</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Categories</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Others
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="order-lg-last">
+              <div class="d-flex float-end">
+                <a href=" " class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center"> <i class="bi bi-heart-fill me-1"></i><p class="d-none d-md-block mb-0"> Wishlist</p> </a>
+                <a href=" " class="border rounded py-1 px-3 nav-link d-flex align-items-center" target="_blank"><i class="bi bi-cart-fill me-1"></i><p class="d-none d-md-block mb-0"> My cart</p> </a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </nav>
     <main>
-        <section class="container">
+        <section class="container bg-white px-5 shadow rounded">
             <div class="row my-3 py-3">
                 <div class='col text-center my-4'> 
-                    <h2 id="name"></h2>
+                    <h2 id="title"></h2>
                 </div>
             </div>
+            <hr>
             <div class="row d-flex justify-content-center">
                 <img class="col-4">
             </div>
             <div class="row d-flex flex-column align-items-center">
                 <h5 id="price" class="mt-4"></h5>
-                <h5 id="brand"></h5>
-                <h5 >Description</h5>
-                <p id="description"></p>
+                <h5 id="description"></h5>
             </div>
+            <p class="pb-4">
+                Ac turpis egestas sed tempus urna et. Amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor. Est lorem ipsum dolor sit. Nulla pharetra diam sit amet nisl suscipit. Aliquet nibh praesent tristique magna sit amet purus. Hendrerit gravida rutrum quisque non tellus orci ac. Eget aliquet nibh praesent tristique magna sit. Ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant. Fames ac turpis egestas integer eget aliquet nibh praesent. Eu consequat ac felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet luctus venenatis lectus magna.
+                
+                Arcu bibendum at varius vel pharetra vel turpis. Consectetur libero id faucibus nisl tincidunt eget nullam. Lectus proin nibh nisl condimentum id. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Arcu dui vivamus arcu felis bibendum. Mauris pharetra et ultrices neque. Faucibus ornare suspendisse sed nisi lacus sed. Mattis rhoncus urna neque viverra justo nec. Nunc lobortis mattis aliquam faucibus purus in. Volutpat odio facilisis mauris sit amet massa. Et malesuada fames ac turpis. Eu lobortis elementum nibh tellus molestie nunc non blandit. Quis enim lobortis scelerisque fermentum dui faucibus in ornare quam. Tellus pellentesque eu tincidunt tortor. Fusce id velit ut tortor pretium viverra. Est ullamcorper eget nulla facilisi etiam dignissim. Nunc congue nisi vitae suscipit tellus. Varius sit amet mattis vulputate. Cursus mattis molestie a iaculis at. Accumsan tortor posuere ac ut consequat semper.
+                
+                Consectetur a erat nam at lectus. Amet commodo nulla facilisi nullam vehicula ipsum a. Ut morbi tincidunt augue interdum velit euismod. Et netus et malesuada fames. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Cursus mattis molestie a iaculis at erat pellentesque. Congue eu consequat ac felis donec et odio pellentesque diam. Curabitur gravida arcu ac tortor dignissim convallis aenean. Molestie ac feugiat sed lectus. Mi ipsum faucibus vitae aliquet nec ullamcorper sit.
+            </p>
         </section>
             <div class="px-5 justify-content-center d-flex my-5">
                 <div class="col-3 d-flex justify-content-around">      
