--- a/backofficeM4D7.html
+++ b/backofficeM4D7.html
@@ -88,11 +88,11 @@
                     </div>
                 </form>
             </div>
+            <hr class="my-4">
+            <a href="homepageM4D7.html" class="col-2 btn btn-danger"><i class="bi bi-house-fill me-2"></i>Go To Homepage</a>
         </div>
     </div>
-    <div class="row shadow bg-white rounded justify-content-center my-5 mx-5 px-3 py-3 ">
-        <a href="homepageM4D7.html" class="col-2 btn btn-primary"><i class="bi bi-house-fill me-3"></i>Back To Homepage</a>
-    </div>
+
 
 <script src="backofficeM4D7.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
