--- a/itemM4D7.html
+++ b/itemM4D7.html
@@ -64,9 +64,10 @@
             </p>
         </section>
             <div class="px-5 justify-content-center d-flex my-5">
-                <div class="col-3 d-flex justify-content-around">      
-                    <a href="homepageM4D7.html" class="btn btn-primary"><i class="bi bi-arrow-left-square-fill"></i>     Back to Books</a>
-                    <button class="btn btn-success">Add to Cart</button>
+                <div class="col-5 d-flex justify-content-around">      
+                    <a href="homepageM4D7.html" class="btn btn-primary"><i class="bi bi-arrow-left-square-fill"></i>     Back to Catalog</a>
+                    <a href="#!" class="btn btn-light border px-2 pt-2 icon-hover"><i class="bi bi-heart-fill mx-1">     Add To Wishlist</i></a>
+                    <button class="btn btn-success"><i class="bi bi-cart-fill me-1"></i>     Add to Cart</button>
                 </div>
             </div>
     </main>
