--- a/backofficeM4D7.html
+++ b/backofficeM4D7.html
@@ -27,7 +27,7 @@
                 <div class="d-flex align-items-center"></div>
             </div>
             <div class="col-1">
-                <span class="fw-bold">Price</span>
+                <span class="fw-bold ms-4">Price</span>
                 <div class="d-flex align-items-center"></div>
             </div>
             <div class="col-1">
